docs: Add configuration and security documentation files
- Add TEMPERATURE_CONFIG.md: Temperature configuration guide
- Add SUMMARY_LENGTH_CONFIG.md: Summary length configuration guide
- Add PDF_DOWNLOAD_SECURITY.md: PDF download security fix documentation
- Update .gitignore to allow these documentation files

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,9 @@ Thumbs.db
 !SWITCH_LLM_PROVIDER.md
 !HYBRID_MODE_GUIDE.md
 !CODE_SWITCH_PROVIDER.md
+!TEMPERATURE_CONFIG.md
+!SUMMARY_LENGTH_CONFIG.md
+!PDF_DOWNLOAD_SECURITY.md
 
 
 # Documentation files (organized in docs/)
